change html inp nm

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input type="tel" name="" value="">
         </div>  
         <div>
-            <input type="password" name="password" value="">
+            <input type="password" name="key" value="">
         </div>  
         <div>
             <p><input checked type="radio" name="color" value="black">black</p>
